# src/index.ts
@@ -20,7 +20,10 @@ import sellerRouter from './routes/seller.js';
 import storeRouter from './routes/store.js';
 import wishlistRouter from './routes/wishlist.js';
 import notificationRouter from './routes/notification.js';
+import walletRouter from './routes/wallet.js';
+import returnExchangeRouter from './routes/returnExchange.js';
 import { globalErrorHandler } from './middleware/errorHandler.js';
+
 
 
 
@@ -58,7 +61,10 @@ app.use("/api/wishlist", wishlistRouter)
 app.use("/api/notifications", notificationRouter)
 app.use("/api/seller", sellerRouter)
 app.use("/api/admin", adminRouter)
+app.use("/api/wallet", walletRouter)
+app.use("/api/return-exchange", returnExchangeRouter)
 app.use("/api", paymentRouter)
+
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 app.use(globalErrorHandler);
 
