# src/routes/admin.ts
@@ -21,5 +21,6 @@ adminRouter.get("/orders/:id", AdminController.getOrderDetail);
 adminRouter.patch("/orders/:id/status", AdminController.updateOrderStatus);
 adminRouter.get("/revenue", AdminController.getPlatformRevenue);
 adminRouter.get("/revenue/sellers/:id", AdminController.getParticularSellerRevenue);
+adminRouter.get("/wallets", AdminController.getWallets);
 
 export default adminRouter;
